test/src/e2e_vm_tests/test_programs/should_fail/imports_implicitly_public/external_mod/src/main.sw
library;

pub mod external_submod;

pub fn external_mod_foo() -> u32 {
    1
}
